--- a/pom.xml
+++ b/pom.xml
@@ -5,13 +5,20 @@
 	<artifactId>MongoDBExample</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>MongoDBExample</name>
-	<description>Example project to selft introduce to mongo and NoSQL world.</description>
+	<description>Example project to self introduce to mongo and NoSQL world.</description>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.mongodb</groupId>
 			<artifactId>mongo-java-driver</artifactId>
 			<version>3.2.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
